# worldmonitor

./: .env.example  CONTRIBUTING.md  README.md  REVIEW-PR-236.md  index.html  middleware.ts  package-lock.json  package.json  requirements.txt  soc-demo.html  vite.config.ts
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
api/: _mitre-db.js  _threat-intel.js  a2a.js  agent.py  cisa-kev.js  flights.js  gatra-cra.js  gatra-data.js  gatra-local.py  ioc-lookup.js  rss-proxy.js  sigma-scan.js  soc-intent.js  social-threats.js  telegram-feed.js  threat-feeds.js
data/: telegram-channels.json
docs/: GATRA_CopilotKit_LangGraph_Integration.docx  GATRA_CopilotKit_LangGraph_Integration.md  SOC_COMMS_DOCUMENTATION.md  USER_GUIDE.md  generate_pptx.py
gatra-agent/: .env.example  .gitignore  pyproject.toml  server.py
gatra-agent/agent/: audit.py  auth.py  graph.py  llm.py  policy.py  request_context.py  state.py
gatra-agent/agent/nodes/: ada.py  cla_report.py  cra.py  llm_respond.py  router.py  rva.py  taa.py
gatra-agent/agent/tools/: alerts.py  client.py  compliance.py  response.py  threat_intel.py  vulnerability.py
gatra-agent/config/: response_gate.yaml
gatra-agent/tests/: test_audit.py  test_auth.py  test_client.py  test_cra.py  test_graph.py  test_integration_lite.py  test_llm.py  test_mode_invariants.py  test_policy.py  test_router.py  test_server_auth.py  test_state.py  test_tools_alerts.py  test_tools_response.py
gatra-agent/tests/fixtures/: alert-card-payload.json  mitre-card-payload.json  vuln-card-payload.json
gatra-copilot/: package-lock.json  (+1 more)
(+123 files in other folders)
